--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+resilience4j.retry.instances.sample-api.maxAttempts=5
+resilience4j.retry.instances.sample-api.wait-duration.seconds=1
