--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 resilience4j.retry.instances.sample-api.maxAttempts=5
 resilience4j.retry.instances.sample-api.wait-duration=1s
+
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
