[andriiv][CES] Creating Container Image for Currency Exchange Microservice

--- a/currency-exchange-service/pom.xml
+++ b/currency-exchange-service/pom.xml
@@ -105,6 +105,11 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+
+                    <image>
+                        <name>romanandriiv/spring-cloud-microservices-${project.artifactId}:${project.version}</name>
+                    </image>
+                    <pullPolicy>IF_NOT_PRESENT</pullPolicy>
                 </configuration>
             </plugin>
         </plugins>
