--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,17 @@ services:
       - "8000:8000"
     networks:
       - currency-network
-
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+  naming-server:
+    image: romanandriiv/spring-cloud-microservices-naming-server:0.0.1-SNAPSHOT
+    mem_reservation: 700m
+    ports:
+      - "8761:8761"
+    networks:
+      - currency-network
 
 networks:
   currency-network:
