--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,17 @@ services:
       - naming-server
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+  currency-conversion:
+    image: romanandriiv/spring-cloud-microservices-currency-conversion-service:0.0.1-SNAPSHOT
+    mem_reservation: 700m
+    ports:
+      - "8100:8100"
+    networks:
+      - currency-network
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
   naming-server:
     image: romanandriiv/spring-cloud-microservices-naming-server:0.0.1-SNAPSHOT
     mem_reservation: 700m
