--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - naming-server
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+
   currency-conversion:
     image: romanandriiv/spring-cloud-microservices-currency-conversion-service:0.0.1-SNAPSHOT
     mem_reservation: 700m
@@ -22,6 +24,8 @@ services:
       - naming-server
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+
   api-gateway:
     image: romanandriiv/spring-cloud-microservices-api-gateway:0.0.1-SNAPSHOT
     mem_reservation: 700m
@@ -33,11 +37,21 @@ services:
       - naming-server
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+
   naming-server:
     image: romanandriiv/spring-cloud-microservices-naming-server:0.0.1-SNAPSHOT
     mem_reservation: 700m
     ports:
       - "8761:8761"
+    networks:
+      - currency-network
+
+  zipkin-server:
+    image: openzipkin/zipkin:2.24
+    mem_reservation: 300m
+    ports:
+      - "9411:9411"
     networks:
       - currency-network
 
